<resources>
    <string name="app_name">Stark</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="diameter">Diameter</string>
    <string name="thickness">Thickness</string>
    <string name="bore">Bore</string>
    <string name="search">SEARCH</string>
    <string name="MaxCutCap">Max Cut Cap(mm)</string>
    <string name="Material">Material</string>
    <string name="Profile">Profile</string>

    <string-array name="Diameter">
        <item>--Select--</item>
        <item>175</item>
        <item>200</item>
        <item>225</item>
        <item>250</item>
        <item>275</item>
        <item>300</item>
        <item>315</item>
        <item>325</item>
        <item>350</item>
        <item>370</item>
        <item>400</item>
        <item>425</item>
        <item>450</item>
        <item>500</item>
        <item>525</item>
        <item>550</item>
        <item>560</item>
        <item>600</item>
        <item>630</item>
    </string-array>

    <string-array name="Thickness">
        <item>--Select--</item>
        <item>175</item>
        <item>200</item>
        <item>225</item>
        <item>250</item>
        <item>275</item>
        <item>300</item>
        <item>315</item>
        <item>325</item>
        <item>350</item>
        <item>370</item>
        <item>400</item>
        <item>425</item>
        <item>450</item>
        <item>500</item>
        <item>525</item>
        <item>550</item>
        <item>560</item>
        <item>600</item>
        <item>630</item>
    </string-array>


    <string-array name="Bore">
            <item>--Select--</item>
        <item>25.4</item>
        <item>32</item>
        <item>225</item>
        <item>38</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>80</item>
        <item>90</item>
        <item>140</item>
    </string-array>


    <string-array name="Material">
        <item>--Select--</item>
        <item>STEEL &lt; 1200 [N/mm^2]   </item>
        <item>STEEL &lt; 500 [N/mm^2]   </item>
        <item>STEEL &lt; 800 [N/mm^2]   </item>
        <item>STAINLESS STEEL</item>
        <item>CAST IRON</item>
        <item>ALUMINIUM</item>
        <item>BRONZE</item>
        <item>COPPER</item>
        <item>BRASS</item>
        <item>ZINC ALLOY</item>
        <item>INCONEL</item>
        <item>TITANIUM</item>
    </string-array>

    <string-array name="Profile">
        <item>--Select--</item>
        <item>Hollow</item>
        <item>Solid</item>
    </string-array>

    <string-array name="ThicknessIfHollow"> <!--6Values-->
        <item>--Select--</item>
        <item>upto 1</item>
        <item>1 - 1.5</item>
        <item>1.5 - 2</item>
        <item>2 - 3</item>
        <item>3 - 4</item>
        <item>upto 4</item>
    </string-array>

    <string-array name="ThicknessIfSolid"> <!--7Values-->
        <item>--Select--</item>
        <item>10 - 20</item>
        <item>20 - 40</item>
        <item>40 - 60</item>
        <item>60 - 90</item>
        <item>90 - 110</item>
        <item>110 - 130</item>
        <item>130 - 150</item>
    </string-array>

</resources>
