<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

       <!-- <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp">
-->


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            android:text="@string/diameter" />

        <Spinner
            android:id="@+id/spinnerDiameter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:spinnerMode="dropdown"></Spinner>

       <!-- </android.support.v7.widget.CardView>-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            android:text="@string/thickness" />

        <Spinner
            android:id="@+id/spinnerThicknessSP"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:spinnerMode="dropdown"></Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            android:text="@string/bore" />

        <Spinner
            android:id="@+id/spinnerBore"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:spinnerMode="dropdown"></Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/MaxCutCap"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMaxCutCap"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="" />

    </LinearLayout>


    <LinearLayout
        android:layout_weight=""
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/card"
            android:elevation="4dp">


            <TableLayout
                android:layout_margin="10dp"
                android:id="@+id/tableLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:text="Code"
                    android:id="@+id/tvCodeHeader"
                    android:layout_column="0">
                </TextView>

                <TextView
                    android:text=""
                    android:id="@+id/tvCodeValue"
                    android:layout_column="1">
                </TextView>

            </TableRow>


            <TableRow
                android:layout_marginTop="5dp"
                android:id="@+id/tableLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="Driving Holes"
                    android:textStyle="bold"
                    android:id="@+id/tvDrivingHolesHeader"
                    android:layout_column="0">
                </TextView>

                <TextView
                    android:text=""
                    android:id="@+id/tvDrivingHolesValue"
                    android:layout_column="1">
                </TextView>

            </TableRow>

            </TableLayout>

            </android.support.v7.widget.CardView>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:text="@string/Material" />

        <Spinner
            android:id="@+id/spinnerMaterial"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:spinnerMode="dropdown"></Spinner>

        <!-- </android.support.v7.widget.CardView>-->
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:text="@string/Profile" />

        <Spinner
            android:id="@+id/spinnerProfile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:spinnerMode="dropdown"></Spinner>

        <!-- </android.support.v7.widget.CardView>-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:text="@string/thickness" />

        <Spinner
            android:id="@+id/spinnerThicknessMP"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:spinnerMode="dropdown"></Spinner>

        <!-- </android.support.v7.widget.CardView>-->
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:weightSum="1">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_button_blue"
            android:text="@string/search" />

    </LinearLayout>


</LinearLayout>